# insurance-tabpfn

./: README.md  pyproject.toml  run_tests_databricks.py
notebooks/: insurance_tabpfn_demo.py
src/insurance_tabpfn/: __init__.py  backends.py  benchmark.py  model.py  relativities.py  report.py  validators.py
tests/: conftest.py  test_backends.py  test_benchmark.py  test_model.py  test_relativities.py  test_report.py  test_validators.py
