[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-tabpfn"
version = "0.1.0"
description = "Foundation model wrapper for thin-data insurance pricing segments"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "insurance",
    "pricing",
    "tabpfn",
    "actuarial",
    "tabular",
    "foundation-model",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=0.20",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
tabpfn = ["tabpfn>=6.0"]
tabicl = ["tabicl>=0.1"]
glm = ["statsmodels>=0.14"]
report = ["jinja2>=3.1"]
all = [
    "tabpfn>=6.0",
    "statsmodels>=0.14",
    "jinja2>=3.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-tabpfn"
Repository = "https://github.com/burning-cost/insurance-tabpfn"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_tabpfn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
